Navigate Register and Login

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -43,10 +43,10 @@
             <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_marginBottom="80dp"
                 android:layout_marginLeft="16dp"
-                android:layout_marginRight="16dp"
                 android:layout_marginTop="80dp"
+                android:layout_marginRight="16dp"
+                android:layout_marginBottom="80dp"
                 app:cardCornerRadius="7dp"
                 app:cardElevation="22dp">
 
@@ -106,8 +106,8 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_marginLeft="20dp"
-                            android:layout_marginRight="20dp"
                             android:layout_marginTop="30dp"
+                            android:layout_marginRight="20dp"
                             android:background="@drawable/input_border_bottom"
                             android:cursorVisible="true"
                             android:gravity="center|left|bottom"
@@ -130,6 +130,28 @@
                         android:padding="10dp"
                         android:text="@string/login"
                         android:textSize="18dp" />
+
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:orientation="horizontal">
+
+                        <TextView
+                            style="@style/TextAppearance.AppCompat.Medium"
+                            android:layout_width="wrap_content"
+                            android:layout_height="match_parent"
+                            android:gravity="center"
+                            android:text="@string/no_account" />
+
+                        <Button
+                            style="@style/Button.Flat"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:onClick="@{() -> viewModel.onRegisterClick()}"
+                            android:text="@string/register" />
+
+                    </LinearLayout>
                 </LinearLayout>
 
                 <LinearLayout
